# cmakedefine-test

./: .gitignore  CMakeLists.txt  build.zig  diff.sh  meson.build  meson_diff.sh  test.h.cmake  zig_diff.sh
